--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "private": true,
     "dependencies": {
         "cra-template": "1.2.0",
+        "intl-tel-input": "^25.3.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-phone-number-input": "^3.4.11",
         "react-scripts": "5.0.1"
     },
     "scripts": {
@@ -36,6 +38,7 @@
         ]
     },
     "devDependencies": {
+        "gh-pages": "^6.3.0",
         "react-router-dom": "^7.1.5"
     }
 }
