--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "intl-tel-input": "^25.3.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-hook-form": "^7.54.2",
         "react-phone-number-input": "^3.4.11",
         "react-scripts": "5.0.1"
     },
