--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "axios": "^1.7.9",
+        "cors": "^2.8.5",
         "cra-template": "1.2.0",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
         "intl-tel-input": "^25.3.0",
+        "pg": "^8.13.1",
+        "pg-hstore": "^2.3.4",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-hook-form": "^7.54.2",
         "react-phone-number-input": "^3.4.11",
-        "react-scripts": "5.0.1"
+        "react-scripts": "5.0.1",
+        "sequelize": "^6.37.5"
     },
     "scripts": {
         "start": "react-scripts start",
